--- a/index.html
+++ b/index.html
@@ -759,15 +759,54 @@ function addAttribute(itemId) {
                 <option value="Dano Crítico">Dano Crítico</option>
                 <option value="Taxa de Crítico">Taxa de Crítico</option>
                 <option value="Precisão">Precisão</option>
+                <option value="Velocidade de Ataque">Velocidade de Ataque</option>
+                <option value="Alcance">Alcance</option>
+                <option value="Perfuração">Perfuração</option>
+                <option value="Dano Elemental">Dano Elemental</option>
+                <option value="Dano Verdadeiro">Dano Verdadeiro</option>
+                <option value="Dano em Área">Dano em Área</option>
             </optgroup>
             <optgroup label="🛡️ DEFESA">
                 <option value="Defesa">Defesa</option>
                 <option value="Resistência">Resistência</option>
                 <option value="Evasão">Evasão</option>
+                <option value="Armadura">Armadura</option>
+                <option value="Bloqueio">Bloqueio</option>
+                <option value="Redução de Dano">Redução de Dano</option>
+                <option value="Resistência Elemental">Resistência Elemental</option>
+                <option value="Imunidade a Status">Imunidade a Status</option>
             </optgroup>
             <optgroup label="❤️ VITALIDADE">
                 <option value="Vida">Vida</option>
+                <option value="Regeneração de Vida">Regeneração de Vida</option>
                 <option value="Mana">Mana</option>
+                <option value="Regeneração de Mana">Regeneração de Mana</option>
+                <option value="Roubo de Vida">Roubo de Vida</option>
+                <option value="Escudo de Energia">Escudo de Energia</option>
+            </optgroup>
+            <optgroup label="✨ MÁGIA">
+                <option value="Poder Mágico">Poder Mágico</option>
+                <option value="Eficiência Mágica">Eficiência Mágica</option>
+                <option value="Redução de Custo de Mana">Redução de Custo de Mana</option>
+                <option value="Tempo de Recarga">Tempo de Recarga</option>
+            </optgroup>
+            <optgroup label="🌀 STATUS E CONTROLE">
+                <option value="Chance de Atordoar">Chance de Atordoar</option>
+                <option value="Chance de Congelar">Chance de Congelar</option>
+                <option value="Chance de Queimar">Chance de Queimar</option>
+                <option value="Chance de Envenenar">Chance de Envenenar</option>
+                <option value="Duração de Status">Duração de Status</option>
+            </optgroup>
+            <optgroup label="🏃 MOBILIDADE">
+                <option value="Velocidade de Movimento">Velocidade de Movimento</option>
+                <option value="Velocidade de Salto">Velocidade de Salto</option>
+                <option value="Queda Segura">Queda Segura</option>  
+            </optgroup>
+            <optgroup label="🧠 UTILIDADE">
+                <option value="Experiência Extra">Experiência Extra</option>
+                <option value="Sorte">Sorte</option>
+                <option value="Detecção de Tesouros">Detecção de Tesouros</option>
+                <option value="Durabilidade Extra">Durabilidade Extra</option>     
             </optgroup>
         </select>
         <input type="number" placeholder="Valor" class="attr-value">
